--- a/ODE/MPC/mpc.ipynb
+++ b/ODE/MPC/mpc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,29 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pen = 0.1\n",
-    "a=0.9\n",
-    "b=0.1\n",
-    "t= 0.3\n",
-    "t_ref = 0.6*np.ones(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.860463516787795"
+       "0.874616880479818"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,24 +55,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1):\n",
+    "a_min = 0.9\n",
+    "a_var = 0.1\n",
+    "\n",
+    "b_min = 0.1\n",
+    "b_var = 0.1\n",
+    "\n",
+    "r_min = 0.1\n",
+    "r_var = 0.1\n",
+    "\n",
+    "x_0_min = 0.2\n",
+    "x_0_var = 0.1\n",
+    "\n",
+    "x_ref_min = 0.7\n",
+    "x_ref_var = 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1000):\n",
     "\t\n",
-    "\ta=0.4*np.random.rand() + 0.6\n",
-    "\tb=0.2*np.random.rand() +0.1\n",
-    "\tr = 0.3*np.random.rand() + 0.1\n",
-    "\tx_0=  np.random.rand()\n",
-    "\tx_ref = np.array([np.random.rand()]*(n))\n",
-    "\t\n",
-    "\tpen = 0.1\n",
     "\ta=0.9\n",
     "\tb=0.1\n",
-    "\tx_0= 0.3\n",
-    "\tx_ref = 0.6*np.ones(n)\n",
-    "\tL = pen * np.identity(n)\n",
+    "\tr = r_var*np.random.rand() + r_min\n",
+    "\tx_0=  0.2\n",
+    "\tx_ref = 0.1*np.array([np.random.rand()]*(n)) + 0.7\n",
+    "\t\n",
+    "\n",
+    "\tL = r * np.identity(n)\n",
     "\tI = np.identity(n)\n",
     "\tA = np.array([a**(i+1) for i in range(n)])\n",
     "\tB = np.array([[a**(i-1) * b for i in range(j, 0, -1)] + [0]*(n-j) for j in range(1, n+1)])\n",
@@ -94,13 +99,13 @@
     "\tconstraints = [u <= np.ones(n), -u <= np.zeros(n), (A*x_0 +B@u) <= np.ones(n), -(A*x_0 +B@u) <= np.zeros(n)]\n",
     "\tprob = cp.Problem(cp.Minimize(cp.quad_form(A*x_0 +B@u - x_ref, I) + cp.quad_form(u, L)), constraints)\n",
     "\tprob.solve()\n",
-    "\tif prob.status == 'optimal': ds.append((np.array([pen, a, b, x_0, x_ref[0]]), u.value))\n",
+    "\tif prob.status == 'optimal': ds.append([(r - r_min)/r_var, (x_ref[0]-x_ref_min)/x_ref_var, u.value])\n",
     "\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,16 +115,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = 0.01*np.random.rand() + 0.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.87088543, 0.69774885, 0.54322603, 0.38843083, 0.21444385])"
+       "0.21641446488199767"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(h - 0.9)/0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.8987645712630695,\n",
+       " 0.6283444593581033,\n",
+       " array([0.94326104, 0.76220455, 0.58958014, 0.4133682 , 0.22129932])]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 1.        , 0.91937198, 0.63322133, 0.33769741])"
+      ]
+     },
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +195,7 @@
        "'optimal'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,23 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor([1.0003e-01, 9.0769e-02, 7.5044e-02, 4.7745e-02, 1.2432e-09],\n",
-       "        dtype=torch.float64),\n",
-       " tensor(0.0262, dtype=torch.float64),\n",
-       " tensor(0., dtype=torch.float64),\n",
-       " tensor(0., dtype=torch.float64),\n",
-       " tensor(0., dtype=torch.float64))"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sol' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[82], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kkt_loss(\u001b[43msol\u001b[49m, lambda_, mu, nu, rho, t, t_ref, a, b, torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;241m1\u001b[39m), pen)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sol' is not defined"
+     ]
     }
    ],
    "source": [
